# BLIP-from-scratch

./: .gitignore  LICENSE  README.md  blip.py  blip_itc.py  blip_optuna.db  check_ms_coco_captions_data.py  dataloader.py  image_encoder.py  infer.py  pyproject.toml  text_encoder.py  text_encoder_decoder.py  train.py  tune_hyperparams.py  visualize_results.py
original/: image_caption.py
